fix: formatDate function to be get local timezone style: sidebar position & page padding on mobile

--- a/client/src/components/ui/Sidebar/style.module.scss
+++ b/client/src/components/ui/Sidebar/style.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   @include flex-center;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
