--- a/client/src/pages/Diary/style.module.scss
+++ b/client/src/pages/Diary/style.module.scss
@@ -2,7 +2,8 @@
 
 .page {
   @include flex-center-column;
-  margin: 2rem 0;
+  margin-top: 2rem;
+  margin-bottom: 8rem;
   .container {
     @include flex-center-column(1rem);
     width: 100%;
@@ -29,8 +30,8 @@
     }
     .meals {
       width: 100%;
-      // border: 1px solid var(--color-text-secondary);
-      // border-top: none;
+      border: 1px solid var(--color-text-secondary);
+      border-top: none;
     }
   }
 }
